# NanoFTS

./: .gitignore  README.md  bench_flush.py  build.sh  fuzzy_search_demo.py  pyproject.toml  setup.py
.github/workflows/: build-ci.yml
docs/: README.md  api-reference.md  rust-ingestion-performance.md  tutorial.md
nanofts/: Cargo.toml  README.md  __init__.py  base.py  factory.py  index.py  inserter.py  inverted.py  lru.py  pyproject.toml
nanofts/examples/: arrow_integration_guide.rs  arrow_real_world.rs  compare_bench.rs  flush_benchmark.rs  ingestion_baseline.rs  ingestion_compare.rs
nanofts/python/nanofts/: __init__.py
nanofts/src/: analyzer.rs  bitmap.rs  doc_tokens.rs  fuzzy.rs  index.rs  lib.rs  lsm_single.rs  persist.rs  query.rs  search.rs  term_dir.rs  unified_engine.rs  vbyte.rs  wal.rs
nanofts/tests/: integration_tests.rs
test/: __init__.py  benchmark_optimizations.py  test_api_coverage.py  test_compound_operations.py  test_concurrent.py  test_data_import.py  test_edge_cases.py  test_nanofts.py  test_persistence.py  test_recovery.py  test_result_handle.py
